syntax = "proto3";

option csharp_namespace = "Basket.API.Protos";

package Basket.API;

service Basket{
	rpc AddToBasket(AddToBasketRequest) returns (AddToBasketResponse){}
} 

message AddToBasketRequest{
	repeated BasketItem items = 1;
}

message BasketItem{
	int32 product_id = 1;
	int32 quantity = 2;

}

message AddToBasketResponse{
	repeated BasketItem items = 1;
	
}
